Add new article resources
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1222337 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -21,7 +21,7 @@ h3. Committers
 | [Charles Moulliard|http://cmoulliard.blogspot.com] | cmoulliard | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
 | Achim Nierbeck | anierbeck |!/images/check.gif! | |
 | [Guillaume Nodet|http://gnodet.blogspot.com] | gnodet | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
-| [Jean-Baptiste Onofré|http://www.nanthrax.net] | jbonofre | !/images/check.gif! | [Talend|http://www.talend.com] |
+| [Jean-Baptiste Onofré|http://blog.nanthrax.net] | jbonofre | !/images/check.gif! | [Talend|http://www.talend.com] |
 | Andreas Pieber| pieber | !/images/check.gif! | |
 | James Strachan | jstrachan | | [FuseSource|http://fusesource.com/] |
 | Christian Schneider  | cschneider | | [Talend |http://www.talend.com/] |
