--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -6,8 +6,13 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. Articles on Apache Karaf
 
+* [Overview on Apache Karaf, Pax Web, and Camel archetypes|http://blog.nanthrax.net/2011/12/overview-on-apache-karaf-pax-web-and-camel-archetypes/]
+* [Do you know Apache Karaf Maven plugins ?|http://blog.nanthrax.net/2011/12/do-you-know-the-apache-karaf-maven-plugins/]
+* [Apache Karaf moved to OSGi r4.3|http://blog.nanthrax.net/2011/11/apache-karaf-moved-to-osgi-r4-3/]
+* [Use Camel, CXF, and Karaf to implement batches|http://blog.nanthrax.net/2011/08/use-camel-cxf-and-karaf-to-implement-batches/]
+* [JAX-RS services using CXF and Karaf|http://blog.nanthrax.net/2011/08/jax-rs-services-using-cxf-and-karaf/]
+* [What's new in Apache Karaf 2.2.4 ?|http://blog.nanthrax.net/2011/10/whats-new-in-karaf-2-2-4/]
 * [Adding custom log-appender to Pax Logging|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=201]
-* [What's new in Apache Karaf Cellar 2.2.2|http://blog.nanthrax.net/2011/08/apache-karaf-cellar-2-2-2-release]
 * [One Year of Apache Karaf|http://www.infoq.com/news/2011/06/apache-karaf]
 * [Apache Karaf Child Instances, what are they, and why should I use them?|http://icodebythesea.blogspot.com/2011/11/apache-karaf-child-instances-what-are.html]
 
@@ -30,7 +35,13 @@ h2. Tutorials
 
 h2. Apache Karaf Cellar
 
+* [Apache Karaf Cellar and DOSGi|http://blog.nanthrax.net/2011/11/apache-karaf-cellar-and-dosgi/]
+* [What's new in Apache Karaf Cellar 2.2.2|http://blog.nanthrax.net/2011/08/apache-karaf-cellar-2-2-2-release]
 * [Apache Karaf Cellar - an overview|http://iocanel.blogspot.com/2011/05/apache-karaf-cellar.html]
+
+h2. Apache Karaf Cave
+
+* [Apache Karaf Cave preview|http://blog.nanthrax.net/2011/08/apache-karaf-cave-preview/]
 
 h2. Apache Karaf Bloggers
 
