--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -49,6 +49,11 @@ h3. Source Distribution
 |Windows Source Distribution| [apache-karaf-2.2.5-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.2.5/apache-karaf-2.2.5-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.2.5/apache-karaf-2.2.5-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.5/apache-karaf-2.2.5-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.5/apache-karaf-2.2.5-src.zip.md5]|
 |Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.5-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.2.5/apache-karaf-2.2.5-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.2.5/apache-karaf-2.2.5-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.5/apache-karaf-2.2.5-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.5/apache-karaf-2.2.5-src.tar.gz.md5]|
 
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-2.2.5.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.5/manual-2.2.5.html] |
+|PDF Manual| [manual-2.2.5.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.5/manual-2.2.5.pdf] |
+
 h2. Keys
 The {{KEYS}} used to sign the release can be found [here|http://www.apache.org/dist/karaf/KEYS].
 
