--- a/src/main/webapp/index/community/download/karaf-2.2.5-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.5-release.page
@@ -8,6 +8,12 @@ h2. Download
 
 Download links can be found in the [Download|/index/community/download.html] page.
 
+h2. Documentation
+
+- Manual ([HTML|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.5/manual-2.2.5.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.5/manual-2.2.5.pdf])
+-- Users Guide ([HTML|http://karaf.apache.org/manual/2.2.5/users-guide/index.html])
+-- Developers Guide ([HTML|http://karaf.apache.org/manual/2.2.5/developers-guide/index.html])
+
 h2. Release Notes - Karaf - Version 2.2.5
 
 This release of Apache Karaf is based off of the 2.2.x series branch, representing an update to Apache Karaf 2.2.4. It contains bug fixes identified in the prior release, and introduces improvements including; multiple JAAS support improvements, better support for Linux systems with certain versions of libc, SCP support, and demos for extending Karaf's console commands and using Karaf Archives (KARs). Several dependencies were also updated, bringing Pax Web to version 1.0.8, Jetty to 7.5.4.v20111024, and Jasypt to 1.8. For more detail please see the change log below.
