--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -1,6 +1,6 @@
 ---
 title: Documentation
-page_version: 5
+page_version: 6
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
@@ -8,7 +8,8 @@ h1. Documentation
 
 h2. Karaf 2.2.x manual
 
-* [Karaf Manual|http://karaf.apache.org/manual/latest-2.2.x/index.html]
+* [Karaf 2.2.5 Manual|http://karaf.apache.org/manual/2.2.5/index.html]
+* [Karaf 2.2.4 Manual|http://karaf.apache.org/manual/2.2.4/index.html]
 
 h2. Karaf 2.1.x manual
 
