--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -1,6 +1,6 @@
 ---
 title: Navigation
-page_version: 16
+page_version: 17
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
@@ -13,8 +13,9 @@ h3. [Overview|Karaf Overview]
 
 h3. [Documentation]
 
-- Users' Guide ([HTML|http://karaf.apache.org/manual/latest-2.2.x/users-guide/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.5/manual-2.2.5.pdf])
-- Developer Guide ([HTML|http://karaf.apache.org/manual/latest-2.2.x/developers-guide/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.5/manual-2.2.5.pdf])
+- Manual ([HTML|http://karaf.apache.org/manual/latest-2.2.x/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.5/manual-2.2.5.pdf])
+-- Users' Guide ([HTML|http://karaf.apache.org/manual/latest-2.2.x/users-guide/index.html])
+-- Developer Guide ([HTML|http://karaf.apache.org/manual/latest-2.2.x/developers-guide/index.html])
 
 h3. Search
 
