[KARAF-876] Add Cave resources
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1226678 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -51,6 +51,11 @@ h3. [Developers]
 
 h3. [Subprojects]
 
+- [Cave]
+-- [Download|/index/subprojects/cave/download.html]
+-- [Source|/index/subprojects/cave/source.html]
+-- [Building|/index/subprojects/cave/building.html]
+
 - [Cellar]
 -- [Download|/index/subprojects/cellar/download.html]
 -- [Source|/index/subprojects/cellar/source.html]
