Update Karaf WebConsole features URL
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1226947 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/webconsole.page
+++ b/src/main/webapp/index/subprojects/webconsole.page
@@ -16,7 +16,7 @@ h2. Quick Start
 To install and start WebConsole into a running Karaf instance, you have to intall the WebConsole feature:
 
 {code}
-karaf@root> feature:add-url mvn:org.apache.karaf.webconsole/features/1.0.0-SNAPSHOT/xml/features
+karaf@root> feature:add-url mvn:org.apache.karaf.webconsole/apache-karaf-webconsole/0.3.0-SNAPSHOT/xml/features
 karaf@root> feature:install webconsole-wicket
 {code}
 
