--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -10,7 +10,7 @@ h1. Releases history
 
 h2. Karaf 2.2.4
 
-[Release Notes|download/karaf-2.2.4-release.html]
+[Release Notes|karaf-2.2.4-release.html]
 
 h3. Binary Distribution
 ||Description||Download Link|| || || ||
@@ -29,7 +29,7 @@ h3. Manual
 
 h2. Karaf 2.2.3
 
-[Release Notes|download/karaf-2.2.3-release.html]
+[Release Notes|karaf-2.2.3-release.html]
 
 h3. Binary Distribution
 
@@ -46,7 +46,7 @@ h3. Source Distribution
 
 h2. Karaf 2.2.2
 
-[Release Notes|download/karaf-2.2.2-release.html]
+[Release Notes|karaf-2.2.2-release.html]
 
 h3. Binary Distribution
 
@@ -62,7 +62,7 @@ h3. Source Distribution
 
 h2. Karaf 2.2.1
 
-[Release Notes|/index/community/download/karaf-2.2.1-release.html]
+[Release Notes|karaf-2.2.1-release.html]
 
 h3. Binary Distribution
 
@@ -78,7 +78,7 @@ h3. Source Distribution
 
 h2. Karaf 2.2.0
 
-[Release Notes|/index/community/download/karaf-2.2.0-release.html]
+[Release Notes|karaf-2.2.0-release.html]
 
 h3. Binary Distribution
 
@@ -94,7 +94,7 @@ h3. Source Distribution
 
 h2. Karaf 2.1.6
 
-[Release Notes|/index/community/download/karaf-2.1.6-release.html]
+[Release Notes|karaf-2.1.6-release.html]
 
 h3. Binary Distribution
 ||Description||Download Link|| || || ||
@@ -108,7 +108,7 @@ h3. Source Distribution
 
 h2. Karaf 2.1.5
 
-[Release Notes|/index/community/download/karaf-2.1.5-release.html]
+[Release Notes|karaf-2.1.5-release.html]
 
 h3. Binary Distribution
 ||Description||Download Link|| || || ||
@@ -122,7 +122,7 @@ h3. Source Distribution
 
 h2. Karaf 2.1.4
 
-[Release Notes|/index/community/download/karaf-2.1.4-release.html]
+[Release Notes|karaf-2.1.4-release.html]
 
 h3. Binary Distribution
 
@@ -138,7 +138,7 @@ h3. Source Distribution
 
 h2. Karaf 2.1.3
 
-[Release Notes|/index/community/download/karaf-2.1.3-release.html]
+[Release Notes|karaf-2.1.3-release.html]
 
 h3. Binary Distribution
 
@@ -154,7 +154,7 @@ h3. Source Distribution
 
 h2. Karaf 2.1.2
 
-[Release Notes|/index/community/download/karaf-2.1.2-release.html]
+[Release Notes|karaf-2.1.2-release.html]
 
 h3. Binary Distribution
 
@@ -170,7 +170,7 @@ h3. Source Distribution
 
 h2. Karaf 2.1.1
 
-[Release Notes|/index/community/download/karaf-2.1.1-release.html]
+[Release Notes|karaf-2.1.1-release.html]
 
 h3. Binary Distribution
 
@@ -186,7 +186,7 @@ h3. Source Distribution
 
 h2. Karaf 2.1.0
 
-[Release Notes|/index/community/download/karaf-2.1.0-release.html]
+[Release Notes|karaf-2.1.0-release.html]
 
 h3. Binary Distribution
 
@@ -202,7 +202,7 @@ h3. Source Distribution
 
 h2. Karaf 2.0.0
 
-[Release Notes|/index/community/download/karaf-2.0.0-release.html]
+[Release Notes|karaf-2.0.0-release.html]
 
 h3. Binary Distribution
 
@@ -218,7 +218,7 @@ h3. Source Distribution
 
 h2. Karaf 1.6.0
 
-[Release Notes|/index/community/download/karaf-1.6.0-release.html]
+[Release Notes|karaf-1.6.0-release.html]
 
 h3. Binary Distribution
 
