--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -31,6 +31,7 @@ h2. Tutorials
 * [Karaf Tutorial Part 3 - Improving configuration editing using the OSGI Metatype Service|http://www.liquid-reality.de/x/KoBe]
 * [Karaf Tutorial Part 4 - CXF Services in OSGi|http://www.liquid-reality.de/x/EoBk]
 * [Karaf Tutorial Part 5 - Running Apache Camel integrations in OSGi|http://www.liquid-reality.de/x/G4Bk]
+* [Karaf Tutorial Part 6 - Database Access|http://www.liquid-reality.de/x/LYBk]
 * [Combining Karaf Features, PAX URL, and Maven to deploy a plain JAR as an OSGi bundle|http://davidvaleri.wordpress.com/2010/08/13/combining-karaf-features-pax-url-and-maven-to-deploy-a-plain-jar-as-an-osgi-bundle/]
 * Blocking system.exit in OSGi on Karaf [part1|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=67] [part2|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=82] [part3|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=94] [part4|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=101]
 * [Running aspects under OSGi 4.2 with Karaf.|http://dywicki.pl/2011/11/running-aspects-under-osgi-4-2-with-karaf/]
