Add link to Jira in the dev section
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1233327 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -43,11 +43,12 @@ h3. [Community]
 
 h3. [Developers]
 
-- [Roadmap|https://cwiki.apache.org/confluence/display/KARAF/Roadmap]
+- [Jira|https://issues.apache.org/jira/browse/KARAF]
 - [Source]
 - [Building]
 - [IRC Room]
 - [Wiki|https://cwiki.apache.org/confluence/display/KARAF]
+- [Roadmap|https://cwiki.apache.org/confluence/display/KARAF/Roadmap]
 
 h3. [Subprojects]
 
