Add EIK subprojects and fix typo
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1233896 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/cave.page
+++ b/src/main/webapp/index/subprojects/cave.page
@@ -6,7 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. Karaf Cave
 
-provides an OSGi Bundle Repository (OBR) and Karaf
+Karaf Cave provides an OSGi Bundle Repository (OBR) and Karaf
 Features Repository (KFR).
 
 OBR provides a service that can automatically install a bundle, with its deployment dependencies, from a bundle
