--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2012-01-20}
 {include:news-2011-12-25}
 {include:news-2011-10-16}
 {include:news-2011-09-01}
