--- a/src/main/webapp/index/subprojects/webconsole.page
+++ b/src/main/webapp/index/subprojects/webconsole.page
@@ -20,8 +20,8 @@ karaf@root> feature:add-url mvn:org.apache.karaf.webconsole/apache-karaf-webcons
 karaf@root> feature:install webconsole-wicket
 {code}
 
-You can open the WebConsole CMS URL in your browser:
+You can open the WebConsole CNS URL in your browser:
 
 {code}
-http://localhost:8181/cms
+http://localhost:8181/cns
 {code}
