--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,11 +1,12 @@
 ---
 title: News
-page_version: 3
+page_version: 4
 page_creator: gnodet
-page_modifier: gnodet
+page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2012-01-30}
 {include:news-2012-01-20}
 {include:news-2011-12-25}
 {include:news-2011-10-16}
