[KARAF-1240] Fix the archives link on the download page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1294658 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -63,6 +63,6 @@ If you want to give a try to the latest snapshots, they are available at the fol
 
 h2. Previous releases
 
-Older releases can be found in the [archives|Archives] section.
+Older releases can be found in the [archives|/index/community/download/archives.html] section.
 
 
