[KARAF-1038] Release Apache Karaf 2.2.6
Update online release notes.



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1309785 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download/karaf-2.2.6-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.6-release.page
@@ -66,6 +66,8 @@ h3. Bug
  * [KARAF-1284|https://issues.apache.org/jira/browse/KARAF-1284] - Karaf bundle archetype maven bundle plugin configuration is missing "instructions" tags.
  * [KARAF-1298|https://issues.apache.org/jira/browse/KARAF-1298] - dev:watch does not work in some cases
  * [KARAF-1304|https://issues.apache.org/jira/browse/KARAF-1304] - Quick help text for features:info command is erroneous
+ * [KARAF-1318|https://issues.apache.org/jira/browse/KARAF-1318] - User bundles are treated as system bundles
+ * [KARAF-1323|https://issues.apache.org/jira/browse/KARAF-1323] - Testfailures in source package
 
 h3. Dependency upgrade
  * [KARAF-1151|https://issues.apache.org/jira/browse/KARAF-1151] - Upgrade to Spring 3.0.7.RELEASE
