--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -6,6 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2012-04-08}
 {include:news-2012-01-30}
 {include:news-2012-01-20}
 {include:news-2011-12-25}
