Update website with Karaf Cellar 2.2.4 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1340620 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,11 +1,12 @@
 ---
 title: News
-page_version: 4
+page_version: 5
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2012-05-20}
 {include:news-2012-04-27}
 {include:news-2012-04-08}
 {include:news-2012-01-30}
