--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2012-05-20}
 {include:news-2012-04-27}
 {include:news-2012-04-08}
 {include:news-2012-01-30}
