--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -39,6 +39,8 @@ h2. Tutorials
 
 h2. Apache Karaf Cellar
 
+* [Apache Karaf Cellar 2.2.4|http://blog.nanthrax.net/2012/05/apache-karaf-cellar-2-2-4/]
+* [Apache Karaf Cellar and central management|http://blog.nanthrax.net/2012/02/apache-karaf-cellar-and-central-management/]
 * [Communication between two remote Camel routes with Karaf Cellar|http://blog.nanthrax.net/2012/02/communication-between-two-remote-camel-routes-using-karaf-cellar/]
 * [Apache Karaf Cellar and DOSGi|http://blog.nanthrax.net/2011/11/apache-karaf-cellar-and-dosgi/]
 * [What's new in Apache Karaf Cellar 2.2.2|http://blog.nanthrax.net/2011/08/apache-karaf-cellar-2-2-2-release]
