[KARAF-1422] Release Apache Karaf 2.2.8 - update website
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1353723 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -8,6 +8,20 @@ h1. Releases history
 
 {toc:minLevel=2|maxLevel=2}
 
+[Release Notes|download/karaf-2.2.7-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-2.2.7.zip|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.2.7.tar.gz|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.7-apache-karaf-2.2.7.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-2.2.7-src.zip|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.7-src.tar.gz|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.md5]|
+
 h2. Karaf 2.2.6
 
 [Release Notes|download/karaf-2.2.6-release.html]
