Updating organization entry
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1354285 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -15,7 +15,7 @@ h3. Committers
 | [Łukasz Dywicki|http://blog.code-house.org] | | | [Code-House|http://code-house.org] | 
 | Freeman Fang | ffang | !/images/check.gif! |  [FuseSource|http://fusesource.com/] |
 | Jarek Gawor | jgawor | !/images/check.gif! | [IBM|http://www.ibm.com] |
-| [Jamie Goodyear|http://icodebythesea.blogspot.com] | jgoodyear | !/images/check.gif! | |
+| [Jamie Goodyear|http://icodebythesea.blogspot.com] | jgoodyear | !/images/check.gif! |[Savoir|http://www.savoirtech.com/] |
 | David Jencks | djencks | !/images/check.gif! | [IBM|http://www.ibm.com] |
 | Alex Karasulu | akarasulu | !/images/check.gif! | |
 | [Charles Moulliard|http://cmoulliard.blogspot.com] | cmoulliard | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
