[KARAF-1602] Fix Source and Building links on the navigation
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1356243 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -44,8 +44,8 @@ h3. [Community]
 h3. [Developers]
 
 - [Jira|https://issues.apache.org/jira/browse/KARAF]
-- [Source]
-- [Building]
+- [Source|/index/developers/source.html]
+- [Building|/index/developers/building.html]
 - [IRC Room]
 - [Wiki|https://cwiki.apache.org/confluence/display/KARAF]
 - [Roadmap|https://cwiki.apache.org/confluence/display/KARAF/Roadmap]
