--- a/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.2.x.page
+++ b/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.2.x.page
@@ -8,74 +8,75 @@ h1. Karaf Dependencies 2.2.x
 
 The below table describes the dependencies included in Apache Karaf 2.2.x builds.
 
-|| Karaf Version || 2.2.0 || 2.2.1 || 2.2.2 || 2.2.3 || 2.2.4 || 2.2.5 || 2.2.6 || 2.2.7 || 2.2.8 ||
-| aopalliance.bundle | 1.0_4 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 |
-| asm.bundle | 3.3_1 | 3.3_2 | 3.3_2 | 3.3_2 | 3.3_2 | 3.3_2 | 3.3.1_1 | 3.3.1_1 | 3.3.1_1 |
-| cglib.bundle | 2.1_3_6 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 |
-| commons-beanutils.bundle | n/a | n/a | n/a | n/a | 1.8.2_2 | 1.8.3 | 1.8.3 | 1.8.3 | 1.8.3 |
-| commons-codec.bundle | 1.3_3 | 1.3_4 | 1.3_4 | 1.3_4 | 1.3_4 | 1.6 | 1.6 | 1.6 | 1.6 |
-| commons-collections.bundle | 3.2.1_1 | 3.2.1_2 | 3.2.1_2 | 3.2.1_2 | 3.2.1_2 | 3.2.1 | 3.2.1 | 3.2.1 | 3.2.1 |
-| commons-fileupload | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
-| commons-lang.bundle | 2.4_4 | 2.4_5 | 2.4_5 | 2.4_5 | 2.4_5 | 2.6 | 2.6 | 2.6 | 2.6 |
-| depends-maven-plugin | 1.0 | 1.0 | 1.0 | 1.0 | 1.2 | 1.2 | 1.2 | 1.2 | 1.2 |
-| icu4j | n/a | n/a | n/a | n/a | 4.8.1.1 | 4.8.1.1 | 4.8.1.1 | 4.8.1.1 | 4.8.1.1 |
-| jasypt.bundle | 1.7_1 | 1.7_3 | 1.7_3 | 1.7_3 | 1.7_3 | 1.8_1 | 1.9.0_1 | 1.9.0_1 | 1.9.0_1 |
-| jetty | 7.2.2.v20101205 | 7.3.1.v20110307 | 7.4.2.v20110526 | 7.4.5.v20110725 | 7.4.5.v20110725 | 7.5.4.v20111024 | 7.5.4.v20111024 | 7.5.4.v20111024 | 7.5.4.v20111024 |
-| junit.bundle | 4.7_2 | 4.7_3 | 4.7_3 | 4.7_3 | 4.7_3 | 4.7_3 | 4.10_1 | 4.10_1 | 4.10_1 |
-| geronimo.activation | n/a | n/a | 1.1 | 1.1 | 1.1 | n/a | n/a | n/a | n/a |
-| geronimo.jms-spec | n/a | n/a | n/a | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
-| geronimo.jpa-spec | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 |
-| geronimo.jta-spec | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
-| geronimo.servlet | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 |
-| easymock | 2.4 | 2.4 | 2.4 | 2.4 | 2.4 | 2.4 | 3.1 | 3.1 | 3.1 |
-| equinox | 3.6.0.v20100517 | 3.6.0.v20100517 | 3.6.0.v20100517 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_20110210 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 |
-| felix.bundlerepository | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 |
-| felix.configadmin | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 |
-| felix.fileinstall | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 | 3.2.0 | 3.2.2 | 3.2.4 |
-| felix.framework | 3.0.8 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 |
-| felix.gogo | 0.6.1 | 0.6.1 | 0.6.1 | 0.6.1 | 0.10.0 | 0.10.0 | 0.10.0 | 0.10.0 | 0.10.0 |
-| felix.plugin | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.6 | 2.3.7 | 2.3.7 | 2.3.7 |
-| felix.utils | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.2.0 |
-| felix.webconsole | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 |
-| felix.metatype | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 |
-| felix.eventadmin | 1.2.8 | 1.2.10 | 1.2.12 | 1.2.12 | 1.2.12 | 1.2.12 | 1.2.14 | 1.2.14 | 1.2.14 |
-| felix.eventadmin-plugin | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 |
-| felix.obr | n/a | n/a | n/a | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 |
-| aries.application | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
-| aries.blueprint | 0.3 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.2 |
-| aries.jmx.api | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 
-| aries.jmx.core | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3.1 |
-| aries.jmx.blueprint | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 |
-| aries.jpa | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
-| aries.jndi | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
-| aries.jndi.core | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 |
-| aries.jndi.rmi | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 | 
-| aries.jndi.url | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 |
-| aries.jndi.legacy | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 |
-| aries.proxy | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | n/a |
-| aries.transaction.blueprint | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
-| aries.transaction.manager | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3.1 |
-| aries.transaction.wrappers | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+|| Karaf Version || 2.2.0 || 2.2.1 || 2.2.2 || 2.2.3 || 2.2.4 || 2.2.5 || 2.2.6 || 2.2.7 || 2.2.8 || 2.2.9 ||
+| aopalliance.bundle | 1.0_4 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 |
+| asm.bundle | 3.3_1 | 3.3_2 | 3.3_2 | 3.3_2 | 3.3_2 | 3.3_2 | 3.3.1_1 | 3.3.1_1 | 3.3.1_1 | 3.3.1_1 |
+| cglib.bundle | 2.1_3_6 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 |
+| commons-beanutils.bundle | n/a | n/a | n/a | n/a | 1.8.2_2 | 1.8.3 | 1.8.3 | 1.8.3 | 1.8.3 | 1.8.3 |
+| commons-codec.bundle | 1.3_3 | 1.3_4 | 1.3_4 | 1.3_4 | 1.3_4 | 1.6 | 1.6 | 1.6 | 1.6 | 1.6 |
+| commons-collections.bundle | 3.2.1_1 | 3.2.1_2 | 3.2.1_2 | 3.2.1_2 | 3.2.1_2 | 3.2.1 | 3.2.1 | 3.2.1 | 3.2.1 | 3.2.1 |
+| commons-fileupload | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
+| commons-lang.bundle | 2.4_4 | 2.4_5 | 2.4_5 | 2.4_5 | 2.4_5 | 2.6 | 2.6 | 2.6 | 2.6 | 2.6 |
+| depends-maven-plugin | 1.0 | 1.0 | 1.0 | 1.0 | 1.2 | 1.2 | 1.2 | 1.2 | 1.2 | 1.2 |
+| icu4j | n/a | n/a | n/a | n/a | 4.8.1.1 | 4.8.1.1 | 4.8.1.1 | 4.8.1.1 | 4.8.1.1 | 4.8.1.1 |
+| jasypt.bundle | 1.7_1 | 1.7_3 | 1.7_3 | 1.7_3 | 1.7_3 | 1.8_1 | 1.9.0_1 | 1.9.0_1 | 1.9.0_1 | 1.9.0_1 |
+| jetty | 7.2.2.v20101205 | 7.3.1.v20110307 | 7.4.2.v20110526 | 7.4.5.v20110725 | 7.4.5.v20110725 | 7.5.4.v20111024 | 7.5.4.v20111024 | 7.5.4.v20111024 | 7.5.4.v20111024 | 7.5.4.v20111024 |
+| junit.bundle | 4.7_2 | 4.7_3 | 4.7_3 | 4.7_3 | 4.7_3 | 4.7_3 | 4.10_1 | 4.10_1 | 4.10_1 | 4.10_1 |
+| geronimo.activation | n/a | n/a | 1.1 | 1.1 | 1.1 | n/a | n/a | n/a | n/a | n/a |
+| geronimo.jms-spec | n/a | n/a | n/a | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
+| geronimo.jpa-spec | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 |
+| geronimo.jta-spec | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
+| geronimo.servlet | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 |
+| easymock | 2.4 | 2.4 | 2.4 | 2.4 | 2.4 | 2.4 | 3.1 | 3.1 | 3.1 | 3.1 |
+| equinox | 3.6.0.v20100517 | 3.6.0.v20100517 | 3.6.0.v20100517 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_20110210 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 |
+| felix.bundlerepository | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 |
+| felix.configadmin | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 |
+| felix.fileinstall | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 | 3.2.0 | 3.2.2 | 3.2.4 | 3.2.4 |
+| felix.framework | 3.0.8 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 | 3.2.2 |
+| felix.gogo | 0.6.1 | 0.6.1 | 0.6.1 | 0.6.1 | 0.10.0 | 0.10.0 | 0.10.0 | 0.10.0 | 0.10.0 | 0.10.0 |
+| felix.plugin | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.6 | 2.3.7 | 2.3.7 | 2.3.7 | 2.3.7 |
+| felix.utils | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.2.0 | 1.2.0 |
+| felix.webconsole | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 |
+| felix.metatype | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 |
+| felix.eventadmin | 1.2.8 | 1.2.10 | 1.2.12 | 1.2.12 | 1.2.12 | 1.2.12 | 1.2.14 | 1.2.14 | 1.2.14 | 1.2.14 |
+| felix.eventadmin-plugin | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 |
+| felix.obr | n/a | n/a | n/a | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 |
+| aries.application | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.blueprint | 0.3 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.2 | 0.3.2 |
+| aries.jmx.api | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.jmx.core | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3.1 | 0.3.1 |
+| aries.jmx.blueprint | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 | 0.3 |
+| aries.jpa | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.jndi | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.jndi.core | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 | 0.3 |
+| aries.jndi.rmi | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 | 0.3 |
+| aries.jndi.url | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 | 0.3 |
+| aries.jndi.legacy | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 0.3 | 0.3 |
+| aries.proxy | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | n/a | 0.3.1 |
+| aries.transaction.blueprint | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.transaction.manager | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3.1 | 0.3.1 |
+| aries.transaction.wrappers | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
 | aries.util | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3.1 |
-| jansi | 1.4 | 1.4 | 1.4 | 1.4 | 1.4 | 1.7 | 1.8 | 1.8 | 1.9 |
-| jline | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.6 | 2.6 | 2.7 |
-| jsw | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 |
-| log4j | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 |
-| maven | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 |
-| mina | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 |
-| osgi | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 |
-| pax.exam | 1.2.3 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 |
-| pax.logging | 1.6.0 | 1.6.2 | 1.6.3 | 1.6.3 | 1.6.3 | 1.6.3 | 1.6.5 | 1.6.5 | 1.6.7 |
-| pax.runner | 1.5.0 | 1.6.1 | 1.6.1 | 1.6.2 | 1.6.2 | 1.6.2 | 1.6.2 | 1.6.2 | 1.6.2 |
-| pax.url | 1.2.5 | 1.2.6 | 1.2.7 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 |
-| pax.web | 1.0.1 | 1.0.3 | 1.0.4 | 1.0.6 | 1.0.7 | 1.0.8 | 1.0.8 | 1.0.9 | 1.0.11 |
-| pax.tinybundles | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 |
-| servicemix.specs | n/a | n/a | n/a | n/a | n/a | n/a | 1.9.0 | 1.9.0 | 2.0.0 |
-| servlet.api | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 |
-| slf4j | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.4 | 1.6.4 | 1.6.4 |
-| spring.osgi | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 |
-| spring2 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 |
-| spring | 3.0.5.RELEASE | 3.0.5.RELEASE | 3.0.5.RELEASE | 3.0.6.RELEASE | 3.0.6.RELEASE | 3.0.6.RELEASE | 3.0.7.RELEASE | 3.0.7.RELEASE | 3.0.7.RELEASE |
-| sshd | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.7.0 |
+| jansi | 1.4 | 1.4 | 1.4 | 1.4 | 1.4 | 1.7 | 1.8 | 1.8 | 1.9 | 1.9 |
+| jline | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.6 | 2.6 | 2.7 | 2.7 | 
+| jsw | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 |
+| log4j | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.17 |
+| maven | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 |
+| mina | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 |
+| osgi | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 |
+| pax.exam | 1.2.3 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 |
+| pax.logging | 1.6.0 | 1.6.2 | 1.6.3 | 1.6.3 | 1.6.3 | 1.6.3 | 1.6.5 | 1.6.5 | 1.6.7 | 1.6.9|
+| pax.runner | 1.5.0 | 1.6.1 | 1.6.1 | 1.6.2 | 1.6.2 | 1.6.2 | 1.6.2 | 1.6.2 | 1.6.2 | 1.6.2 |
+| pax.url | 1.2.5 | 1.2.6 | 1.2.7 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 |
+| pax.web | 1.0.1 | 1.0.3 | 1.0.4 | 1.0.6 | 1.0.7 | 1.0.8 | 1.0.8 | 1.0.9 | 1.0.11 | 1.0.11 |
+| pax.tinybundles | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 |
+| plexus.utils | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | n/a | 2.1 |
+| servicemix.specs | n/a | n/a | n/a | n/a | n/a | n/a | 1.9.0 | 1.9.0 | 2.0.0 | 2.0.0 |
+| servlet.api | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 |
+| slf4j | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.6 |
+| spring.osgi | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 |
+| spring2 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 |
+| spring | 3.0.5.RELEASE | 3.0.5.RELEASE | 3.0.5.RELEASE | 3.0.6.RELEASE | 3.0.6.RELEASE | 3.0.6.RELEASE | 3.0.7.RELEASE | 3.0.7.RELEASE | 3.0.7.RELEASE | 3.0.7.RELEASE |
+| sshd | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.7.0 | 0.7.0 |
 | xbean | 3.7 | 3.7 | 3.7 | 3.7 | 3.7 | 3.7 | 3.7 | 3.7 | 3.7 |
 | javax.mail | 1.4.3 | 1.4.3 | 1.4.3 | 1.4.4 | 1.4.4 | 1.4.4 | 1.4.4 | 1.4.4 | 1.4.4 |
