--- a/src/main/webapp/index/community/download/karaf-2.2.9-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.9-release.page
@@ -16,7 +16,7 @@ h2. Documentation
 
 h2. Release Notes - Karaf - Version 2.2.9
 
-  This release of Apache Karaf is based off of the 2.2.x series branch, representing an update to Apache Karaf 2.2.8. It contains bug fixes identified in the prior release, and introduces improvements including; An update to fix a NullPointerException when using JDK 6 update 33 or JDK 7 update5, A new JDBC lock implementation for Postgre, a fix for using version with the wrap protocol, and renaming command-watch to watch. Several dependences were also updated, bringing Felix Framework to 3.2.2, pax-logging to 1.6.9, slf4j to 1.6.6, xbean to 3.11.1, aries proxy to 0.3.1, and a multitude of updates to maven plugins.
+  This release of Apache Karaf is based off of the 2.2.x series branch, representing an update to Apache Karaf 2.2.8. It contains bug fixes identified in the prior release, and introduces improvements including; An update to fix a NullPointerException when using JDK 6 update 33 or JDK 7 update5, a new JDBC lock implementation for Postgres, a fix for using version with the wrap protocol, and renaming command-watch to watch. Several dependences were also updated, bringing Felix Framework to 3.2.2, pax-logging to 1.6.9, slf4j to 1.6.6, xbean to 3.11.1, aries proxy to 0.3.1, and a multitude of updates to maven plugins.
   For more detail please see the change log below.
 
 h3. Bug
