--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -8,6 +8,10 @@ h1. Documentation
 
 h2. Karaf 2.2.x manual
 
+* [Karaf 2.2.9 Manual|http://karaf.apache.org/manual/2.2.9/index.html]
+* [Karaf 2.2.8 Manual|http://karaf.apache.org/manual/2.2.8/index.html]
+* [Karaf 2.2.7 Manual|http://karaf.apache.org/manual/2.2.7/index.html]
+* [Karaf 2.2.6 Manual|http://karaf.apache.org/manual/2.2.6/index.html]
 * [Karaf 2.2.5 Manual|http://karaf.apache.org/manual/2.2.5/index.html]
 * [Karaf 2.2.4 Manual|http://karaf.apache.org/manual/2.2.4/index.html]
 
