Announce Brian Topping as a Karaf committer
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1380236 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,11 +1,12 @@
 ---
 title: News
-page_version: 5
+page_version: 6
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2012-09-03}
 {include:news-2012-08-18}
 {include:news-2012-06-25}
 {include:news-2012-05-20}
