--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,6 +1,6 @@
 ---
 title: Karaf 2.2.9
-page_version: 16
+page_version: 17
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2012-09-03}
 {include:news-2012-08-18}
 {include:news-2012-06-25}
 {include:news-2012-05-20}
