--- a/src/main/webapp/index/community/news/news-2012-05-20.page
+++ b/src/main/webapp/index/community/news/news-2012-05-20.page
@@ -3,7 +3,7 @@ page_version: 1
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
-h1. Jean-Baptiste Onofre posted on May 20, 2012\\Karaf Cellar 2.2.4 released
+h1. Jean-Baptiste Onofré posted on May 20, 2012\\Karaf Cellar 2.2.4 released
 
 The Karaf team is pleased to announce the availability of [Karaf Cellar 2.2.4|index/subprojects/cellar/download/karaf-cellar-2.2.4-release.html].
 This release of Apache Karaf Cellar is considered a high priority update for users of Apache Karaf Cellar 2.2.3. It includes a lot of bug fixes and new features. 
