Update team page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1380258 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -25,7 +25,7 @@ h3. Committers
 | Andreas Pieber| pieber | !/images/check.gif! | |
 | James Strachan | jstrachan | | [FuseSource|http://fusesource.com/] |
 | Christian Schneider  | cschneider | | [Talend |http://www.talend.com/] |
-| Adrian Trenaman | | | [FuseSource|http://fusesource.com/] | 
+| Adrian Trenaman | | | | 
 | Gert Vanthienen | gertv | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
 
 h3. Contributors
