Fix webconsole url
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1381418 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/webconsole.page
+++ b/src/main/webapp/index/subprojects/webconsole.page
@@ -20,8 +20,8 @@ karaf@root> feature:add-url mvn:org.apache.karaf.webconsole/apache-karaf-webcons
 karaf@root> feature:install webconsole-wicket
 {code}
 
-You can open the WebConsole CNS URL in your browser:
+You can open the WebConsole in your browser:
 
 {code}
-http://localhost:8181/cns
+http://localhost:8181/console
 {code}
