Updating team page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1382043 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -12,7 +12,7 @@ h3. Committers
 | [Ioannis Canellos|http://iocanel.blogspot.com] | iocanel | !/images/check.gif! | [FuseSource|http://fusesource.com/]  |
 | Hiram Chirino    | chirino | | [FuseSource|http://fusesource.com/] |
 | Chris Custine    | ccustine | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
-| [Łukasz Dywicki|http://blog.code-house.org] | | | [Code-House|http://code-house.org] | 
+| [Łukasz Dywicki|http://blog.code-house.org] | | !/images/check.gif! | [Code-House|http://code-house.org] | 
 | Freeman Fang | ffang | !/images/check.gif! |  [FuseSource|http://fusesource.com/] |
 | Jarek Gawor | jgawor | !/images/check.gif! | [IBM|http://www.ibm.com] |
 | [Jamie Goodyear|http://icodebythesea.blogspot.com] | jgoodyear | !/images/check.gif! |[Savoir Technologies|http://www.savoirtech.com/] |
@@ -27,6 +27,7 @@ h3. Committers
 | Christian Schneider  | cschneider | | [Talend |http://www.talend.com/] |
 | Adrian Trenaman | | | | 
 | Gert Vanthienen | gertv | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
+| Heath Kesler | hkesler | | [Savoir Technologies|http://www.savoirtech.com/] |
 
 h3. Contributors
 
