Updating team page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1382044 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -27,6 +27,7 @@ h3. Committers
 | Christian Schneider  | cschneider | | [Talend |http://www.talend.com/] |
 | Adrian Trenaman | | | | 
 | Gert Vanthienen | gertv | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
+| Brian Topping | btopping | | |
 | Heath Kesler | hkesler | | [Savoir Technologies|http://www.savoirtech.com/] |
 
 h3. Contributors
