[KARAF-1808] add commerical support page - update
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1383649 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/commercial.page
+++ b/src/main/webapp/index/community/commercial.page
@@ -12,7 +12,7 @@ h3. FuseSource
 
 h3. Savoir Technologies, Inc
 
-Savoir Technologies, Inc provides enterprise consulting, training and support for Karaf and a host of other Apache service containers. Savoir can provide best practice mentoring for developing with Karaf, as well as architectural/design reviews, troubleshooting and SOA infrastructure implementations.
+[Savoir Technologies, Inc|http://www.savoirtech.com] provides enterprise consulting, training and support for Karaf and a host of other Apache service containers. Savoir can provide best practice mentoring for developing with Karaf, as well as architectural/design reviews, troubleshooting and SOA infrastructure implementations.
 
 h3. Talend
 
