--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -14,8 +14,8 @@ h3. [Overview|Karaf Overview]
 h3. [Documentation]
 
 - Manual ([HTML|http://karaf.apache.org/manual/latest-2.2.x/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.9/manual-2.2.9.pdf])
--- Users' Guide ([HTML|http://karaf.apache.org/manual/latest-2.2.x/users-guide/index.html])
--- Developer Guide ([HTML|http://karaf.apache.org/manual/latest-2.2.x/developers-guide/index.html])
+-- [User Guide | http://karaf.apache.org/manual/latest-2.2.x/users-guide/index.html]
+-- [Developer Guide | http://karaf.apache.org/manual/latest-2.2.x/developers-guide/index.html]
 
 h3. Search
 
