[KARAF-1336] Release Apache Karaf 2.3.0
Updating website.



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1398532 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -6,6 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2012-10-15}
 {include:news-2012-09-03}
 {include:news-2012-08-18}
 {include:news-2012-06-25}
