--- a/src/main/webapp/snippets/karaf-features.page
+++ b/src/main/webapp/snippets/karaf-features.page
@@ -12,4 +12,5 @@ page_modifier: gnodet
 * *Remote access*: use any SSH client to connect to Karaf and issue commands in the console
 * *Security framework* based on JAAS
 * *Managing instances*: Karaf provides simple commands for managing multiple instances. You can easily create, delete, start and stop instances of Karaf through the console.
-* Supports the latest OSGi 4.2 containers: Apache Felix Framework 3.0 and Eclipse Equinox 3.6
+* Karaf 2.3.x branch Supports the latest OSGi 4.3 containers: Apache Felix Framework 4.0 and Eclipse Equinox 3.8
+* Karaf 2.2.x branch Supports the latest OSGi 4.2 containers: Apache Felix Framework 3.0 and Eclipse Equinox 3.6
