--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -13,7 +13,7 @@ h3. Committers
 | Hiram Chirino    | chirino | | [FuseSource|http://fusesource.com/] |
 | Chris Custine    | ccustine | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
 | [Łukasz Dywicki|http://blog.code-house.org] | | !/images/check.gif! | [Code-House|http://code-house.org] | 
-| Freeman Fang | ffang | !/images/check.gif! |  [FuseSource|http://fusesource.com/] |
+| [Freeman Fang|http://freemanfang.blogspot.com/] | ffang | !/images/check.gif! |  [FuseSource|http://fusesource.com/] |
 | Jarek Gawor | jgawor | !/images/check.gif! | [IBM|http://www.ibm.com] |
 | [Jamie Goodyear|http://icodebythesea.blogspot.com] | jgoodyear | !/images/check.gif! |[Savoir Technologies|http://www.savoirtech.com/] |
 | David Jencks | djencks | !/images/check.gif! | [IBM|http://www.ibm.com] |
