Adding some book resources to articles page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1409208 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -37,6 +37,11 @@ h2. Tutorials
 * [Running aspects under OSGi 4.2 with Karaf.|http://dywicki.pl/2011/11/running-aspects-under-osgi-4-2-with-karaf/]
 * [Run a Google Web Toolkit 2 project on Apache Karaf/ServiceMix|http://cmoulliard.blogspot.com/2011/12/run-google-web-toolkit-2-project-on.html]
 
+h2. Books
+
+* [OSGi Starter - The essential guide to modular development with OSGi for the serious application developer.|http://www.packtpub.com/open-services-gateway-initiative-starter/book]
+* [OSGi in Action|http://www.manning.com/hall/]
+
 h2. Apache Karaf Cellar
 
 * [Apache Karaf Cellar 2.2.4|http://blog.nanthrax.net/2012/05/apache-karaf-cellar-2-2-4/]
