Adding some book resources to articles page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1409211 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -41,6 +41,7 @@ h2. Books
 
 * [OSGi Starter - The essential guide to modular development with OSGi for the serious application developer.|http://www.packtpub.com/open-services-gateway-initiative-starter/book]
 * [OSGi in Action|http://www.manning.com/hall/]
+* [Java Application Architecture: Modularity Patterns with Examples Using OSGi|http://www.pearsonhighered.com/educator/product/Java-Application-Architecture-Modularity-Patterns-with-Examples-Using-OSGi/9780321247131.page]
 
 h2. Apache Karaf Cellar
 
