--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -6,6 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. Articles on Apache Karaf
 
+* [How to enable HTTPs certificate client auth with Karaf|http://blog.nanthrax.net/2012/12/how-to-enable-https-certificate-client-auth-with-karaf/]
 * [Apache Karaf 2011 Millesime|http://blog.nanthrax.net/2012/01/apache-karaf-2011-millesime/]
 * [Coming in Karaf 3.0: new KAR service, command, and management|http://blog.nanthrax.net/2011/12/coming-in-karaf-3-0-new-kar-service-command-management/]
 * [Overview on Apache Karaf, Pax Web, and Camel archetypes|http://blog.nanthrax.net/2011/12/overview-on-apache-karaf-pax-web-and-camel-archetypes/]
