--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2012-12-21}
 {include:news-2012-12-06}
 {include:news-2012-10-15}
 {include:news-2012-09-03}
